--- a/docker/l2geth/Dockerfile
+++ b/docker/l2geth/Dockerfile
@@ -1,7 +1,8 @@
-FROM scrolltech/l2geth:ccc-0.0.2
+FROM scrolltech/l2geth:ccc-0.0.6
 # FROM scrolltech/l2geth:scroll-v3.3.1
 
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib/
+ENV RUST_LOG="info"
 
 RUN mkdir -p /l2geth/keystore
 
