--- a/docker/l2geth/Dockerfile
+++ b/docker/l2geth/Dockerfile
@@ -1,7 +1,6 @@
-FROM scrolltech/l2geth:scroll-v4.3.17
+FROM scrolltech/l2geth:test
 # FROM scrolltech/l2geth:scroll-v3.3.1
 
-ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib/
 ENV RUST_LOG="debug"
 
 RUN mkdir -p /l2geth/keystore
